--- a/src/app/myskills/myskills.component.scss
+++ b/src/app/myskills/myskills.component.scss
@@ -30,6 +30,7 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     background-color: white;
     color: black;
     margin: 20px;
@@ -62,6 +63,7 @@ h1{
         .skill{
             width: 140px;
             height: 40px;
+            font-size: 20px;
         }
         .skill-section{
             font-size: 45px;
@@ -72,5 +74,28 @@ h1{
     .skill{
         width: 130px;
         height: 35px;
+        img{
+            height: 55px;
+        }
+    }
+}
+
+@media(max-width: 850px){
+    .skill{
+        width: 100px;
+        height: 26px;
+        font-size: 17px;
+    }
+}
+
+@media(max-width: 730px){
+    .skill{
+        width: 70px;
+        height: 19px;
+        font-size: 15px;
+
+        img{
+            height: 40px;
+        }
     }
 }
