--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@ body {
     margin: 0;
     background-color: black;
     font-family: "Inter", sans-serif;
-    overflow-x: hidden;
+    overflow-x: auto;
+
 }
 
 .profile-pic {
